--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,14 +3,6 @@
     box-sizing: border-box;
 }
 
-img {
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-}
-
 :root {
     --gray: #cfcfcf;
     --white: #f0f0f0;
@@ -18,10 +10,23 @@ img {
     --black: #161c21;
 }
 
-body {
-    background: rgba(117,123,242,1)!important;
-    overflow-x: hidden;
-    max-width: 100%;
+html {
+    min-height: 100%;
+    height: 100%;
+    position: relative;
+    body {
+        background: rgba(117,123,242,1);
+        overflow-x: hidden;
+        max-width: 100%;
+    }
+}
+
+img {
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 header a,a:hover {
@@ -199,38 +204,61 @@ div.vtuber > div > h3 > a {
 
 /* Auto Adjustment */
 
-@media (min-width: 2000px) {
+@media (min-width: 2400px) {
     .vtubers .list {
-        margin-top: 76px;
+        margin-top: 137px;
+    }
+    .bottom p {
+        font-size: 150%;
+        margin-top: 170px;
     }
     .vtubers .list,
     .vtubers .title {
-        transform: scale(1.3, 1.3);
-        -ms-transform: scale(1.3, 1.3); /* IE 9 */
-        -webkit-transform: scale(1.3, 1.3); /* Safari and Chrome */
-        -o-transform: scale(1.3, 1.3); /* Opera */
-        -moz-transform: scale(1.3, 1.3); /* Firefox */
+        transform: scale(1.4, 1.4);
+        -ms-transform: scale(1.4, 1.4); /* IE 9 */
+        -webkit-transform: scale(1.4, 1.4); /* Safari and Chrome */
+        -o-transform: scale(1.4, 1.4); /* Opera */
+        -moz-transform: scale(1.4, 1.4); /* Firefox */
     }
 }
 
 @media (max-width: 800px) {
-
     .bottom p {
         position: relative;
-        top: 15px;
+        top: 5px;
         margin-bottom: 11px;
-        left: 47vw;
+        left: 36vw;
         text-size-adjust: auto;
         width: 50%;
     }
 
-    .area {
-        height: 130vh;
+    .vtubers .list{
+        border-bottom: 1px white;
+        border-left: none;
+        border-right: none;
 
-        .circles {
-            height: 130vh;
+            .vtuber {
+            margin: 0;
+            margin-left: -55px;
+            text-align: center;
+            display: block;
+            z-index: 1;
+
+            position: relative;
+            left: 25px;
+
+            transform: scale(0.9, 0.9);
+            -ms-transform: scale(0.9, 0.9); /* IE 9 */
+            -webkit-transform: scale(0.9, 0.9); /* Safari and Chrome */
+            -o-transform: scale(0.9, 0.9); /* Opera */
+            -moz-transform: scale(0.9, 0.9); /* Firefox */
         }
     }
+        
+    .vtubers .list .text h3 {
+        margin-top: -19px;
+    }
+    
 
     .vtubers {
         padding-top: 20px;
@@ -261,51 +289,4 @@ div.vtuber > div > h3 > a {
         text-align: center;
         font-size: 2.5rem;
     }
-}
-
-@media (max-width: 800px) {
-    .bottom p {
-        position: relative;
-        top: 5px;
-        margin-bottom: 11px;
-        left: 36vw;
-        text-size-adjust: auto;
-        width: 50%;
-    }
-
-    .area {
-        height: 180vh;
-
-        .circles {
-            height: 180vh;
-        }
-    }
-
-    .vtubers .list{
-        border-bottom: 1px white;
-        border-left: none;
-        border-right: none;
-
-            .vtuber {
-            margin: 0;
-            margin-left: -55px;
-            text-align: center;
-            display: block;
-            z-index: 1;
-
-            position: relative;
-            left: 25px;
-
-            transform: scale(0.9, 0.9);
-            -ms-transform: scale(0.9, 0.9); /* IE 9 */
-            -webkit-transform: scale(0.9, 0.9); /* Safari and Chrome */
-            -o-transform: scale(0.9, 0.9); /* Opera */
-            -moz-transform: scale(0.9, 0.9); /* Firefox */
-        }
-    }
-        
-    .vtubers .list .text h3 {
-        margin-top: -19px;
-    }
-    
 }
